src/objects/Intermediary__c.object
<CustomObject>
    <description>This is the organisation which carries out the intermediary role</description>
    <fields>
        <fullName>Grant_Award_Name__c</fullName>
        <formula>HYPERLINK(
 IF(
  ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;), 
  &apos;/datasolution/&apos;, &apos;/&apos;
  ) &amp;  Id, 
   Grant_Award__r.Grant_Award_Name__c , &apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Award Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the related grant award for this intermediary record</description>
        <label>System Award Reference No</label>
        <referenceTo>Grant_Award__c</referenceTo>
        <relationshipLabel>Intermediaries</relationshipLabel>
        <relationshipName>Intermediaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme_Name__c</fullName>
        <formula>HYPERLINK(
 IF(
  ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;), 
  &apos;/datasolution/&apos;, &apos;/&apos;
  ) &amp;  Id, 
   Grant_Scheme__r.Scheme_Name__c , &apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Scheme Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the related grant scheme</description>
        <label>System Scheme Reference No</label>
        <referenceTo>Grant_Scheme__c</referenceTo>
        <relationshipLabel>Intermediaries</relationshipLabel>
        <relationshipName>Intermediaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intermediary_Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related organisation for this intermediary</description>
        <inlineHelpText>Organisations who distribute or administer grants on behalf of a government department i.e. a government agency, NDPB, charity or business. In some cases, a government department can act as an intermediary for another government department.</inlineHelpText>
        <label>Intermediary Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intermediaries</relationshipLabel>
        <relationshipName>Intermediaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_My_Department_Data__c</fullName>
        <description>The user needs to have a default list view filtered for their own department, but they can change this</description>
        <formula>LEFT(
 Owner:User.UserRole.Name , 
 IF(
  RIGHT(Owner:User.UserRole.Name, 8) == &apos; Manager&apos;
  , LEN(Owner:User.UserRole.Name) - 8
  , LEN(Owner:User.UserRole.Name) - 5
 )
)== LEFT(
 $UserRole.Name, 
 IF(
  RIGHT($UserRole.Name, 8) == &apos; Manager&apos;
  , LEN($UserRole.Name) - 8
  , LEN($UserRole.Name) - 5
 )
)</formula>
        <label>Is My Department Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The intermediary role carried out by the organisation</description>
        <inlineHelpText>The role that an intermediary plays in the grant administration process. You can choose multiple roles.</inlineHelpText>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Engagement Advertising</fullName>
                </value>
                <value>
                    <fullName>Application Assessment</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Grant Award</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Performance Monitoring</fullName>
                </value>
                <value>
                    <fullName>Final Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intermediary</label>
    <nameField>
        <displayFormat>INT-{00000000}</displayFormat>
        <label>Intermediary Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intermediaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Department_Check_on_create</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , ISNEW()
 , IF(
  NOT(ISBLANK(Grant_Award__c)),
  NOT( Grant_Award__r.Is_My_Department_Data__c ),
  NOT( Grant_Scheme__r.Is_My_Department_Data__c )
 )
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on the related Grant Award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_update</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , Owner:User.UserRoleId &lt;&gt;  $User.UserRoleId 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_Scheme_Or_Grant_Award_is_mandatory</fullName>
        <active>true</active>
        <description>The intermediary record has to be connected either to a Grant Scheme or to a Grant Award record</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , OR(
  AND(
   ISBLANK( Grant_Award__c )
   , ISBLANK( Grant_Scheme__c )
  )
  , AND(
   NOT(ISBLANK( Grant_Award__c ))
   , NOT(ISBLANK( Grant_Scheme__c ))
  )
 )
)</errorConditionFormula>
        <errorMessage>Intermediary has to be related either to a Grant Scheme or a Grant Award</errorMessage>
    </validationRules>
</CustomObject>